test/interaction/Issue3501.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Bool " nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue3501.agda:6.14-18: error: [Interaction.CaseSplitError] Cannot split on variable b, because let-declarations may not be defined by pattern-matching when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue3501.agda" . 90)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
